2013-10-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm: Added exeptions in safe_input
	and safe_output to avoid differences with the console condification
	with single and double quotes. Incident #309

2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* conf/pandora_server.conf.new: re-added the token "policy_manager"
	into the default server conf file.

2013-08-28 Kikuchi Koichiro <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added PID number to self monitoring XML
	 filename to avoid a race condition occurs when server and agent
	 are running on the same host.

	* lib/PandoraFMS/DataServer.pm: Added <module_group> support.

2013-08-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Config.pm, bin/pandora_server: backport the token
	"policy_manager" from the 5 version for to disabled the policy
	queue.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm: Merged from trunk. Added clean-up
	  code to avoid resource leaks when there is a crash and the server has
	  to auto-restart.

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Fixed some
	  parentheses that prevented remote_snmp_string modules from working.

2013-07-10  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Merged from trunk. Ignore reports if the
	  metaconsole is enabled, since agents are never local.

2013-06-27  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf.new.

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec,